update second exercise (jquery)

--- a/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/style.css
+++ b/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/style.css
@@ -42,7 +42,10 @@ input[type='text'] {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
-
+.information p {
+  font-size: 30px;
+  padding-left: 20px;
+}
 .search {
   text-align: center;
   margin: 50px auto;
