--- a/mICP-5/SQLite/SQLite/app/src/main/res/layout/activity_employer.xml
+++ b/mICP-5/SQLite/SQLite/app/src/main/res/layout/activity_employer.xml
@@ -107,6 +107,14 @@
                 android:layout_alignEnd="@+id/nameInputLayout"
                 android:layout_alignTop="@+id/deleteButton"
                 android:text="@string/deleteall" />
+
+            <Button
+                android:id="@+id/clearButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/nameInputLayout"
+                android:layout_alignTop="@+id/deleteButton"
+                android:text="@string/clear" />
         </RelativeLayout>
     </ScrollView>
 </layout>
