--- a/mICP-5/SQLite/SQLite/app/src/main/res/layout/activity_employee.xml
+++ b/mICP-5/SQLite/SQLite/app/src/main/res/layout/activity_employee.xml
@@ -15,7 +15,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            tools:context="com.vijaya.sqlite.EmployeeActivity">
+            tools:context="com.vijaya.employment.EmployeeActivity">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/firstnameInputLayout"
@@ -106,6 +106,7 @@
                 android:layout_below="@id/employerSpinner"
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="30dp"
+                android:background="@drawable/new_button2"
                 android:text="@string/save" />
 
             <Button
@@ -115,6 +116,7 @@
                 android:layout_below="@id/employerSpinner"
                 android:layout_alignParentLeft="true"
                 android:layout_marginBottom="30dp"
+                android:background="@drawable/new_button3"
                 android:text="@string/search" />
 
             <Button
@@ -123,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/employerSpinner"
                 android:layout_centerHorizontal="true"
+                android:background="@drawable/new_button5"
                 android:text="@string/edit" />
 
             <android.support.v7.widget.RecyclerView
@@ -139,6 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/editButton"
                 android:layout_centerHorizontal="true"
+                android:background="@drawable/new_button2"
                 android:text="@string/delete" />
 
             <Button
@@ -148,12 +152,14 @@
                 android:layout_alignEnd="@+id/firstnameInputLayout"
                 android:layout_below="@+id/saveButton"
                 android:layout_marginTop="-30dp"
+                android:background="@drawable/new_button"
                 android:text="@string/deleteall" />
             <Button
                 android:id="@+id/clearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/nameInputLayout"
+                android:background="@drawable/new_button"
                 android:layout_alignTop="@+id/deleteButton"
                 android:text="@string/clear" />
         </RelativeLayout>
