--- a/mICP-5/SQLite/SQLite/app/src/main/res/layout/activity_main.xml
+++ b/mICP-5/SQLite/SQLite/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.vijaya.sqlite.MainActivity">
+        tools:context="com.vijaya.employment.MainActivity">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -22,12 +22,14 @@
                 android:id="@+id/firstActivityButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Employer Activity" />
+                android:text="Employer Activity"
+                android:background="@drawable/new_button2"/>
 
             <Button
                 android:id="@+id/secondActivityButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/new_button5"
                 android:text="Employee Activity" />
         </LinearLayout>
     </RelativeLayout>
