--- a/mICP-5/SQLite/SQLite/app/src/main/res/values/colors.xml
+++ b/mICP-5/SQLite/SQLite/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="lightYellow">#ffff66</color>
+    <color name="darkYellow">#ffd633</color>
+    <color name="cornFlowerBlue">#6593F5</color>
+    <color name="darkBlue">#0F52BA</color>
 </resources>
