--- a/mICP-6/SpeechToText/app/src/main/res/layout/activity_main.xml
+++ b/mICP-6/SpeechToText/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,32 @@
     android:layout_height="match_parent"
     tools:context="com.vijaya.speechtotext.MainActivity">
 
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="144dp"
+        android:text=""
+        android:textSize="20sp" />
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_above="@+id/btnSpeakContainer"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="20dp"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/voiceInput"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:forceHasOverlappingRendering="true"
+            android:textSize="25sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
     </ScrollView>
 
@@ -47,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/btnSpeak"
             android:layout_margin="10dp"
-            android:text="@string/hint" />
+            android:text="@string/hint"
+            android:textSize="20sp"/>
     </LinearLayout>
 </RelativeLayout>
